--- a/src/public/themes/theme2/part-pkg/price-discount/list.html
+++ b/src/public/themes/theme2/part-pkg/price-discount/list.html
@@ -46,6 +46,7 @@
                                 <th>Discount Group</th>
                                 <th>Purchase Discount (%)</th>
                                 <th>Customer Discount (%)</th>
+                                <th>Effective From</th>
                                 <th>Status</th>
                             </tr>
                         </thead>
