--- a/src/public/themes/theme2/part-pkg/part/form.html
+++ b/src/public/themes/theme2/part-pkg/part/form.html
@@ -716,7 +716,8 @@
                                                                 <div class="row">
                                                                     <div class="col-md-12">
                                                                         <a class="btn btn-primary btn-prev">Previous</a>
-                                                                        <a class="btn btn-bordered btn-nxt">Next</a>
+                                                                        <a ng-if="$ctrl.action=='Edit'" class="btn btn-bordered btn-nxt">Next</a>
+                                                                        <button type="submit" ng-if="$ctrl.action=='Add'" class="btn btn-bordered submit">Submit</button>
                                                                     </div>
                                                                 </div>
                                                             </div>
