--- a/src/public/themes/theme2/part-pkg/price-discount/list.html
+++ b/src/public/themes/theme2/part-pkg/price-discount/list.html
@@ -47,6 +47,7 @@
                                 <th>Purchase Discount (%)</th>
                                 <th>Customer Discount (%)</th>
                                 <th>Effective From</th>
+                                <th>Effective To</th>
                                 <th>Status</th>
                             </tr>
                         </thead>
