--- a/src/public/themes/theme2/part-pkg/part/form.html
+++ b/src/public/themes/theme2/part-pkg/part/form.html
@@ -385,7 +385,7 @@
                                                                     <div class="col-md-3">
                                                                         <div class="input-text form-group">
                                                                             <label>
-                                                                                Tax Status
+                                                                                Battery Purchase Tax Status
                                                                             </label>
                                                                             <div class="tab-switch">
                                                                                 <md-switch ng-model="$ctrl.tax_status" aria-label="Switch 3" ng-true-value="'No'" ng-false-value="'Yes'" class="md-warn type-2">
